[gd_scene load_steps=26 format=2]

[ext_resource path="res://ui/gui/button/small/small_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/gui/button/joystick/mobile_joystick.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/gui/icons/special_attack_icon.png" type="Texture" id=3]
[ext_resource path="res://system/components/callers/comp_method_caller.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/gui/button/joystick/shoot/joystick_button_shoot.png" type="Texture" id=5]
[ext_resource path="res://ui/platform_exclusive_feature.gd" type="Script" id=6]
[ext_resource path="res://ui/gui/icons/pause_icon.png" type="Texture" id=7]
[ext_resource path="res://system/components/callers/comp_event_caller.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/gui/text_box/tutorial_text_box.png" type="Texture" id=9]
[ext_resource path="res://system/components/receivers/comp_event_receiver.tscn" type="PackedScene" id=10]
[ext_resource path="res://ui/gui/button/touch_screen_button_disable.gd" type="Script" id=11]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=12]
[ext_resource path="res://ui/mobile_ui/tutorial_controller_mobile.gd" type="Script" id=13]
[ext_resource path="res://ui/mobile_ui/special_attack_button_visuals.gd" type="Script" id=14]
[ext_resource path="res://ui/gui/icons/interact_icon.png" type="Texture" id=15]
[ext_resource path="res://ui/gui/button/small/button_small_pressed.png" type="Texture" id=16]
[ext_resource path="res://ui/gui/button/small/button_small_normal.png" type="Texture" id=17]
[ext_resource path="res://ui/mobile_ui/extra_button_controller.gd" type="Script" id=18]
[ext_resource path="res://ui/mobile_ui/mobile_button_displacement.gd" type="Script" id=19]
[ext_resource path="res://ui/gui/icons/switch_icon.png" type="Texture" id=20]

[sub_resource type="Shader" id=1]
resource_local_to_scene = true
code = "shader_type canvas_item;


uniform vec4 overlay_color : hint_color = vec4(1.0, 1.0, 0.0, 1.0);


void fragment() {
	vec4 WHITE = vec4(1.0, 1.0, 1.0, 1.0);
	
	vec4 pixel_color = texture(TEXTURE, UV);
	vec4 final_color = pixel_color;
	
	if (pixel_color == WHITE) {
		final_color = overlay_color;
	}
	
	COLOR = final_color;
}"

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/overlay_color = Color( 1, 1, 1, 1 )

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/overlay_color = Color( 1, 1, 1, 1 )

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/overlay_color = Color( 1, 1, 1, 1 )

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/overlay_color = Color( 1, 1, 1, 1 )

[node name="mobile_ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 6 )

[node name="shooting_joystick" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -45.0
grow_horizontal = 0
rect_pivot_offset = Vector2( -434, -7 )
mouse_filter = 2
custom_constants/separation = 0

[node name="shooting_joystick_vertical_container" type="VBoxContainer" parent="shooting_joystick"]
margin_bottom = 135.0
mouse_filter = 2
custom_constants/separation = 0
alignment = 2

[node name="shooting_joystick" parent="shooting_joystick/shooting_joystick_vertical_container" instance=ExtResource( 2 )]
margin_top = 110.0
margin_bottom = 110.0

[node name="background" parent="shooting_joystick/shooting_joystick_vertical_container/shooting_joystick" index="0"]
play_backwards = true

[node name="TouchScreenButton" parent="shooting_joystick/shooting_joystick_vertical_container/shooting_joystick/background/button_pivot" index="1"]
normal = ExtResource( 5 )
input_event = "player_shooting_direction_updated"

[node name="pressed_method_caller" parent="shooting_joystick/shooting_joystick_vertical_container/shooting_joystick" instance=ExtResource( 4 )]
method = {
"args": [ "player_shooting_joystick_pressed" ],
"caller": "input_events",
"method": "emit_signal"
}

[node name="returned_method_caller" parent="shooting_joystick/shooting_joystick_vertical_container/shooting_joystick" instance=ExtResource( 4 )]
method = {
"args": [ "player_shooting_joystick_returned" ],
"caller": "input_events",
"method": "emit_signal"
}

[node name="released_method_caller" parent="shooting_joystick/shooting_joystick_vertical_container/shooting_joystick" instance=ExtResource( 4 )]
method = {
"args": [ "player_shooting_joystick_released" ],
"caller": "input_events",
"method": "emit_signal"
}

[node name="bottom_margin" type="MarginContainer" parent="shooting_joystick/shooting_joystick_vertical_container"]
margin_top = 110.0
margin_bottom = 135.0
mouse_filter = 2
custom_constants/margin_bottom = 25
script = ExtResource( 19 )
margin_axis = "-y"
assigned_setting_value = "shooting_joystick"

[node name="right_margin" type="MarginContainer" parent="shooting_joystick"]
margin_right = 45.0
margin_bottom = 135.0
mouse_filter = 2
custom_constants/margin_right = 45
script = ExtResource( 19 )
margin_axis = "-x"
assigned_setting_value = "shooting_joystick"

[node name="switch_projectile" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -34.0
custom_constants/separation = 0
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="switch_projectile"]
margin_left = 12.0
margin_right = 28.0
margin_bottom = 135.0
custom_constants/separation = 0
alignment = 2

[node name="switch_projectile_button" type="TextureRect" parent="switch_projectile/VBoxContainer"]
material = SubResource( 5 )
margin_top = 83.0
margin_right = 16.0
margin_bottom = 99.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 20 )
stretch_mode = 4
script = ExtResource( 14 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="switch_projectile/VBoxContainer/switch_projectile_button"]
show_behind_parent = true
material = SubResource( 6 )
position = Vector2( -3, -3 )
normal = ExtResource( 17 )
pressed = ExtResource( 16 )
script = ExtResource( 11 )

[node name="comp_method_caller" parent="switch_projectile/VBoxContainer/switch_projectile_button/TouchScreenButton" instance=ExtResource( 4 )]
method = {
"args": [ "switch_projectile_request" ],
"caller": "player_events",
"method": "emit_signal"
}

[node name="set_grayscale_event" parent="switch_projectile/VBoxContainer/switch_projectile_button" instance=ExtResource( 10 )]
position = Vector2( 2, 2 )
platform = "mobile"
emitter = "player_events"
event = "no_projectiles"

[node name="set_normal_event" parent="switch_projectile/VBoxContainer/switch_projectile_button" instance=ExtResource( 10 )]
position = Vector2( 2, 2 )
platform = "mobile"
emitter = "player_events"
event = "has_projectiles"

[node name="bottom_margin" type="MarginContainer" parent="switch_projectile/VBoxContainer"]
margin_top = 99.0
margin_right = 16.0
margin_bottom = 135.0
custom_constants/margin_bottom = 36
script = ExtResource( 19 )
margin_axis = "-y"
assigned_setting_value = "switch_projectile"

[node name="right_margin" type="MarginContainer" parent="switch_projectile"]
margin_left = 28.0
margin_right = 34.0
margin_bottom = 135.0
custom_constants/margin_right = 6
script = ExtResource( 19 )
margin_axis = "-x"
assigned_setting_value = "switch_projectile"

[node name="special_attack" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -27.0
grow_horizontal = 0
rect_pivot_offset = Vector2( -434, -7 )
mouse_filter = 2
custom_constants/separation = 0
alignment = 2

[node name="special_attack_vertical_container" type="VBoxContainer" parent="special_attack"]
margin_left = 13.0
margin_right = 13.0
margin_bottom = 135.0
custom_constants/separation = 0
alignment = 2

[node name="button_anchor" type="Control" parent="special_attack/special_attack_vertical_container"]
margin_top = 121.0
margin_bottom = 121.0
mouse_filter = 2
script = ExtResource( 18 )

[node name="special_attack_button" type="TextureRect" parent="special_attack/special_attack_vertical_container/button_anchor"]
material = SubResource( 4 )
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
texture = ExtResource( 3 )
stretch_mode = 4
script = ExtResource( 14 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="special_attack/special_attack_vertical_container/button_anchor/special_attack_button"]
show_behind_parent = true
material = SubResource( 7 )
position = Vector2( -1, -1 )
normal = ExtResource( 17 )
pressed = ExtResource( 16 )
script = ExtResource( 11 )
disabled = true

[node name="comp_method_caller" parent="special_attack/special_attack_vertical_container/button_anchor/special_attack_button/TouchScreenButton" instance=ExtResource( 4 )]
method = {
"args": [ "enter_eat_state_request" ],
"caller": "player_events",
"method": "emit_signal"
}

[node name="set_grayscale_event" parent="special_attack/special_attack_vertical_container/button_anchor/special_attack_button" instance=ExtResource( 10 )]
position = Vector2( 2, 2 )
emitter = "player_events"
event = "special_attack_unavailable"

[node name="set_normal_event" parent="special_attack/special_attack_vertical_container/button_anchor/special_attack_button" instance=ExtResource( 10 )]
position = Vector2( 2, 2 )
emitter = "player_events"
event = "special_attack_available"

[node name="set_yellowscale_event" parent="special_attack/special_attack_vertical_container/button_anchor/special_attack_button" instance=ExtResource( 10 )]
position = Vector2( -1, -1 )
emitter = "player_events"
event = "special_attack_tutorial_available"

[node name="interact_button" type="TextureRect" parent="special_attack/special_attack_vertical_container/button_anchor"]
visible = false
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
texture = ExtResource( 15 )
stretch_mode = 4

[node name="TouchScreenButton" type="TouchScreenButton" parent="special_attack/special_attack_vertical_container/button_anchor/interact_button"]
show_behind_parent = true
position = Vector2( -1, -1 )
normal = ExtResource( 17 )
pressed = ExtResource( 16 )
script = ExtResource( 11 )

[node name="comp_method_caller" parent="special_attack/special_attack_vertical_container/button_anchor/interact_button/TouchScreenButton" instance=ExtResource( 4 )]
method = {
"args": [ "player_interacted_mobile" ],
"caller": "player_events",
"method": "emit_signal"
}

[node name="bottom_margin" type="MarginContainer" parent="special_attack/special_attack_vertical_container"]
margin_top = 121.0
margin_bottom = 135.0
custom_constants/margin_bottom = 14
script = ExtResource( 19 )
margin_axis = "-y"
assigned_setting_value = "special_attack"

[node name="right_margin" type="MarginContainer" parent="special_attack"]
margin_left = 13.0
margin_right = 27.0
margin_bottom = 135.0
custom_constants/margin_right = 14
script = ExtResource( 19 )
margin_axis = "-x"
assigned_setting_value = "special_attack"

[node name="movement_joystick" type="HBoxContainer" parent="."]
anchor_bottom = 1.0

[node name="left_margin" type="MarginContainer" parent="movement_joystick"]
margin_right = 35.0
margin_bottom = 135.0
custom_constants/margin_left = 35
script = ExtResource( 19 )
assigned_setting_value = "movement_joystick"

[node name="h_box_container" type="VBoxContainer" parent="movement_joystick"]
margin_left = 39.0
margin_right = 39.0
margin_bottom = 135.0
alignment = 2

[node name="movement_joystick" parent="movement_joystick/h_box_container" instance=ExtResource( 2 )]
margin_top = 111.0
margin_bottom = 111.0

[node name="comp_event_caller" parent="movement_joystick/h_box_container/movement_joystick" instance=ExtResource( 8 )]

[node name="bottom_margin" type="MarginContainer" parent="movement_joystick/h_box_container"]
margin_top = 115.0
margin_bottom = 135.0
custom_constants/margin_bottom = 20
script = ExtResource( 19 )
margin_axis = "-y"
assigned_setting_value = "movement_joystick"

[node name="pause_button" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
grow_horizontal = 0
custom_constants/separation = 0
alignment = 2

[node name="HBoxContainer" type="VBoxContainer" parent="pause_button"]
margin_left = 28.0
margin_right = 28.0
margin_bottom = 40.0
custom_constants/separation = 0

[node name="top_margin" type="MarginContainer" parent="pause_button/HBoxContainer"]
margin_bottom = 12.0
mouse_filter = 2
custom_constants/margin_top = 12
script = ExtResource( 19 )
margin_axis = "y"
assigned_setting_value = "pause_button"

[node name="button_anchor" type="Control" parent="pause_button/HBoxContainer"]
margin_top = 12.0
margin_bottom = 12.0
mouse_filter = 2

[node name="pause_button" parent="pause_button/HBoxContainer/button_anchor" instance=ExtResource( 1 )]
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0

[node name="icon" parent="pause_button/HBoxContainer/button_anchor/pause_button/center_container" index="0"]
margin_left = 2.0
margin_top = 2.0
margin_right = 18.0
margin_bottom = 18.0
texture = ExtResource( 7 )

[node name="click_sound" parent="pause_button/HBoxContainer/button_anchor/pause_button" index="1"]
pause_mode = 2

[node name="comp_event_caller" parent="pause_button/HBoxContainer/button_anchor/pause_button" instance=ExtResource( 8 )]
event = "toggle_pause_request"

[node name="right_margin" type="MarginContainer" parent="pause_button"]
margin_left = 28.0
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/margin_right = 12
script = ExtResource( 19 )
margin_axis = "-x"
assigned_setting_value = "pause_button"

[node name="tutorials" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -67.5
margin_right = 120.0
margin_bottom = 67.5
mouse_filter = 2
script = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="tutorials"]
anchor_bottom = 1.0
margin_right = 84.0
mouse_filter = 2
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="tutorials/HBoxContainer"]
margin_right = 1.0
margin_bottom = 135.0
custom_constants/margin_left = 1

[node name="VBoxContainer" type="VBoxContainer" parent="tutorials/HBoxContainer"]
margin_left = 1.0
margin_right = 97.0
margin_bottom = 135.0
mouse_filter = 2
custom_constants/separation = 0
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="tutorials/HBoxContainer/VBoxContainer"]
margin_right = 96.0
margin_bottom = 20.0
mouse_filter = 2
custom_constants/margin_top = 20

[node name="TutorialTextBox" type="TextureRect" parent="tutorials/HBoxContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 96.0
margin_bottom = 52.0
mouse_filter = 2
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="tutorials/HBoxContainer/VBoxContainer/TutorialTextBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
theme = ExtResource( 12 )
text = "use the joystick to move"
align = 1
valign = 1
autowrap = true

[node name="timer" type="Timer" parent="tutorials"]

[node name="tutorial_text_show_cooldown" type="Timer" parent="tutorials"]
one_shot = true

[connection signal="joystick_in_use" from="shooting_joystick/shooting_joystick_vertical_container/shooting_joystick/background/button_pivot/TouchScreenButton" to="shooting_joystick/shooting_joystick_vertical_container/shooting_joystick/pressed_method_caller" method="call_method"]
[connection signal="joystick_in_use" from="shooting_joystick/shooting_joystick_vertical_container/shooting_joystick/background/button_pivot/TouchScreenButton" to="tutorials" method="_on_shooting_joystick_in_use"]
[connection signal="joystick_released" from="shooting_joystick/shooting_joystick_vertical_container/shooting_joystick/background/button_pivot/TouchScreenButton" to="shooting_joystick/shooting_joystick_vertical_container/shooting_joystick/released_method_caller" method="call_method"]
[connection signal="joystick_returned" from="shooting_joystick/shooting_joystick_vertical_container/shooting_joystick/background/button_pivot/TouchScreenButton" to="shooting_joystick/shooting_joystick_vertical_container/shooting_joystick/returned_method_caller" method="call_method"]
[connection signal="released" from="switch_projectile/VBoxContainer/switch_projectile_button/TouchScreenButton" to="switch_projectile/VBoxContainer/switch_projectile_button/TouchScreenButton/comp_method_caller" method="call_method"]
[connection signal="event_received" from="switch_projectile/VBoxContainer/switch_projectile_button/set_grayscale_event" to="switch_projectile/VBoxContainer/switch_projectile_button" method="_on_set_grayscale_event_event_received"]
[connection signal="event_received" from="switch_projectile/VBoxContainer/switch_projectile_button/set_grayscale_event" to="switch_projectile/VBoxContainer/switch_projectile_button/TouchScreenButton" method="disable"]
[connection signal="event_received" from="switch_projectile/VBoxContainer/switch_projectile_button/set_normal_event" to="switch_projectile/VBoxContainer/switch_projectile_button" method="_on_set_normal_event_event_received"]
[connection signal="event_received" from="switch_projectile/VBoxContainer/switch_projectile_button/set_normal_event" to="switch_projectile/VBoxContainer/switch_projectile_button/TouchScreenButton" method="enable"]
[connection signal="pressed" from="special_attack/special_attack_vertical_container/button_anchor/special_attack_button/TouchScreenButton" to="special_attack/special_attack_vertical_container/button_anchor/special_attack_button/TouchScreenButton/comp_method_caller" method="call_method"]
[connection signal="released" from="special_attack/special_attack_vertical_container/button_anchor/special_attack_button/TouchScreenButton" to="special_attack/special_attack_vertical_container/button_anchor/special_attack_button/TouchScreenButton/comp_method_caller" method="call_method"]
[connection signal="event_received" from="special_attack/special_attack_vertical_container/button_anchor/special_attack_button/set_grayscale_event" to="special_attack/special_attack_vertical_container/button_anchor/special_attack_button" method="_on_set_grayscale_event_event_received"]
[connection signal="event_received" from="special_attack/special_attack_vertical_container/button_anchor/special_attack_button/set_grayscale_event" to="special_attack/special_attack_vertical_container/button_anchor/special_attack_button/TouchScreenButton" method="enable"]
[connection signal="event_received" from="special_attack/special_attack_vertical_container/button_anchor/special_attack_button/set_normal_event" to="special_attack/special_attack_vertical_container/button_anchor/special_attack_button" method="_on_set_normal_event_event_received"]
[connection signal="event_received" from="special_attack/special_attack_vertical_container/button_anchor/special_attack_button/set_normal_event" to="special_attack/special_attack_vertical_container/button_anchor/special_attack_button/TouchScreenButton" method="disable"]
[connection signal="event_received" from="special_attack/special_attack_vertical_container/button_anchor/special_attack_button/set_yellowscale_event" to="special_attack/special_attack_vertical_container/button_anchor/special_attack_button" method="_on_set_yellowscale_event_event_received"]
[connection signal="event_received" from="special_attack/special_attack_vertical_container/button_anchor/special_attack_button/set_yellowscale_event" to="special_attack/special_attack_vertical_container/button_anchor/special_attack_button/TouchScreenButton" method="enable"]
[connection signal="pressed" from="special_attack/special_attack_vertical_container/button_anchor/interact_button/TouchScreenButton" to="special_attack/special_attack_vertical_container/button_anchor/interact_button/TouchScreenButton/comp_method_caller" method="call_method"]
[connection signal="released" from="special_attack/special_attack_vertical_container/button_anchor/interact_button/TouchScreenButton" to="special_attack/special_attack_vertical_container/button_anchor/interact_button/TouchScreenButton/comp_method_caller" method="call_method"]
[connection signal="joystick_in_use" from="movement_joystick/h_box_container/movement_joystick/background/button_pivot/TouchScreenButton" to="tutorials" method="_on_movement_joystick_used"]
[connection signal="joystick_pressed" from="movement_joystick/h_box_container/movement_joystick/background/button_pivot/TouchScreenButton" to="shooting_joystick/shooting_joystick_vertical_container/shooting_joystick/pressed_method_caller" method="call_method"]
[connection signal="pressed" from="pause_button/HBoxContainer/button_anchor/pause_button" to="pause_button/HBoxContainer/button_anchor/pause_button/comp_event_caller" method="call_event"]
[connection signal="request_movement_joystick_animation" from="tutorials" to="movement_joystick/h_box_container/movement_joystick/background" method="play_tutorial_animation"]
[connection signal="request_shooting_joystick_animation" from="tutorials" to="shooting_joystick/shooting_joystick_vertical_container/shooting_joystick/background" method="play_tutorial_animation"]
[connection signal="request_stop_movement_joystick_animation" from="tutorials" to="movement_joystick/h_box_container/movement_joystick/background" method="stop_playing_tutorial_animation"]
[connection signal="request_stop_shooting_joystick_animation" from="tutorials" to="shooting_joystick/shooting_joystick_vertical_container/shooting_joystick/background" method="stop_playing_tutorial_animation"]
[connection signal="timeout" from="tutorials/timer" to="tutorials" method="_on_timer_timeout"]
[connection signal="timeout" from="tutorials/tutorial_text_show_cooldown" to="tutorials" method="_on_tutorial_text_show_cooldown_timeout"]

[editable path="shooting_joystick/shooting_joystick_vertical_container/shooting_joystick"]
[editable path="movement_joystick/h_box_container/movement_joystick"]
[editable path="pause_button/HBoxContainer/button_anchor/pause_button"]
